--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <body>
         <header>
             <img class="logotyp" src="images/logotyp.jpg" alt="Logotyp">
-            <nav>
-                <a href="index.html">
-                    <i class="fa-solid fa-house me-1"></i>Hem</a>
-                <a href="experience.html">
-                    <i class="fa-solid fa-mountain-sun me-1"></i>Upplevelser</a>
-                <a href="resident.html">
-                    <i class="fa-solid fa-house me-1"></i>Boende</a>
-                <a href="location.html">
-                    <i class="fa-solid fa-location-dot me-1"></i>Hitta hit</a>
+            <nav class="menu">
+                <ul>
+                    <li> <a href="index.html">
+                        <i class="fa-solid fa-house me-1"></i><span class="medium-large-screen">Hem</span></a></li>
+
+                    <li> <a href="experience.html">
+                        <i class="fa-solid fa-mountain-sun me-1"></i><span class="medium-large-screen">Upplevelser</span></></li>
+                    <li> <a href="resident.html">
+                        <i class="fa-solid fa-house me-1"></i><span class="medium-large-screen">Boende</span></a></li>
+                    <li> <a href="location.html">
+                        <i class="fa-solid fa-location-dot me-1"></i><span class="medium-large-screen">Hitta hit</span></a></li>
+                </ul>
             </nav>
         </header>
         <img class="img-wide" src="images/lukasz-szmigiel-8AdYB7M4OHY-unsplash.jpg" alt="Bild av en temugg och 2 blomväxter" class="banner">
@@ -28,8 +31,8 @@
             <!-- 3 bilder i block -->
             <div class="inline-justify-content">
                 <img class="image-inline small-image image-round-corners" src="images/lovis.jpg" alt="">
-                <img class="image-inline small-image image-round-corners" src="images/lovis.jpg" alt="">
-                <img class="image-inline small-image image-round-corners" src="images/lovis.jpg" alt="">
+                <img class="image-inline small-image image-round-corners remove-image-small-screen" src="images/lovis.jpg" alt="">
+                <img class="image-inline small-image image-round-corners remove-image-small-screen" src="images/lovis.jpg" alt="">
             </div>
 
             <section>
